src/test/06-Errors/error-auto-auto.txt
error-auto-auto.ck:2:1: error: cannot use 'auto' type variable declaration here...
[2] auto foo => auto bar;
    ^
error-auto-auto.ck: (hint: 'auto' requires either initialization or specific contexts)
